--- a/projetos/projeto-shopping-responsive/style.css
+++ b/projetos/projeto-shopping-responsive/style.css
@@ -4,3 +4,27 @@
   box-sizing: border-box;
   font-family: 'Oswald', sans-serif;
 }
+
+main {
+  height: 100vh;
+  width: 100vw;
+}
+
+.container-left {
+  display: inline-block;
+  width: 60%;
+}
+
+.container-right {
+  display: inline-block;
+  position: absolute;
+  background-color: rgba(93, 93, 155, 0.16);
+  width: 40%;
+  height: 100vh;
+}
+
+img {
+  position: relative;
+  top: 25%;
+  right: 130px;
+}
