--- a/projetos/projeto-shopping-responsive/style.css
+++ b/projetos/projeto-shopping-responsive/style.css
@@ -3,6 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  color: #5d5d7d;
 }
 
 main {
@@ -11,6 +13,8 @@ main {
 }
 
 .container-left {
+  margin-top: 25%;
+  padding: 0 136px;
   display: inline-block;
   width: 60%;
 }
@@ -23,8 +27,62 @@ main {
   height: 100vh;
 }
 
+header {
+  margin-top: 24px;
+  margin-left: 57px;
+}
+
+header a {
+ text-decoration: none;
+ font-size: 28px;
+ line-height: 41px;
+ margin-left: 57px;
+ margin-right: 41px;
+}
+
+.work{
+  opacity: 0.4;
+}
+
 img {
   position: relative;
   top: 25%;
   right: 130px;
+}
+
+h1 {
+  width: 368px;
+  font-size: 70px;
+  line-height: 80px;
+}
+
+p {
+  width: 540px;
+  margin: 15px 0;
+  font-size: 28px;
+  line-height: 48px;
+  opacity: 0.6;
+}
+
+button {
+  width: 269px;
+  height: 62px;
+  background: #9499ea;
+  box-shadow: 0px 10px 24px rgba(148, 153, 234, 0.0979959);
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+
+  font-size: 24px;
+  line-height: 36px;
+  text-align: center;
+  color: #ffffff;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+button:active {
+  opacity: 0.5;
 }
