--- a/projetos/projeto-shopping-responsive/style.css
+++ b/projetos/projeto-shopping-responsive/style.css
@@ -14,7 +14,7 @@ main {
 
 .container-left {
   margin-top: 25%;
-  padding: 0 136px;
+  padding-left: 136px;
   display: inline-block;
   width: 60%;
 }
@@ -28,20 +28,27 @@ main {
 }
 
 header {
-  margin-top: 24px;
-  margin-left: 57px;
+  margin: 24px 0 0 57px;
 }
 
 header a {
- text-decoration: none;
- font-size: 28px;
- line-height: 41px;
- margin-left: 57px;
- margin-right: 41px;
+  text-decoration: none;
+  font-size: 28px;
+  line-height: 41px;
+  margin-left: 57px;
+  margin-right: 41px;
 }
 
-.work{
+a:nth-child(2) {
   opacity: 0.4;
+}
+
+a:hover {
+  opacity: 0.4;
+}
+
+a:active {
+  opacity: 0.8;
 }
 
 img {
@@ -85,4 +92,65 @@ button:hover {
 
 button:active {
   opacity: 0.5;
+}
+
+@media screen and (max-width: 900px) {
+  .container-left {
+    display: block;
+    width: 100%;
+    height: 50%;
+    padding: 0;
+    margin: 0;
+  }
+
+  .container-right {
+    display: block;
+    width: 100%;
+    height: auto;
+    position: static;
+    padding: 40px;
+  }
+
+  img {
+    position: static;
+    max-width: 90%;
+  }
+
+  header {
+    display: none;
+  }
+
+  h1 {
+    font-size: 36px;
+    line-height: 52px;
+    width: auto;
+    margin: 50px 53px 0 58px;
+    text-align: center;
+  }
+
+  p {
+    margin: 15px 40px;
+    width: auto;
+    text-align: center;
+
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  button {
+    margin: 0 auto;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .container-left {
+    height: 70%;
+  }
+}
+
+@media screen and (max-width: 290px) {
+  button {
+    width: 80%;
+  }
 }
